--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animation Library</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body background="img/1305928.jpeg">
-
+<div class="set">
+    <div><img src="img/chopcrycover.jpg" alt="Choppa"></div>
+</div>
 </body>
 </html>
