--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <div class="set">
     <div><img src="img/chopcrycover.jpg" alt="Choppa"></div>
 </div>
+<div class="set2">
+    <div><img src="img/screen-shot-2023-09-15-at-4-19-31-pm-6504bc60249ac.png" alt="choppa2"></div>
+</div>
 </body>
 </html>
