--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body background="img/1305928.jpeg">
-<div class="set">
+<div class="flip-horizontal-bottom">
     <div><img src="img/chopcrycover.jpg" alt="Choppa"></div>
 </div>
-<div class="set2">
+<div class="vibrate-1">
     <div><img src="img/screen-shot-2023-09-15-at-4-19-31-pm-6504bc60249ac.png" alt="choppa2"></div>
 </div>
 </body>
